<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="copyright">Copyright ⓒ 2014 JWS All Rights Reserved</string>

    <string name="app_name">GNFL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="str_done">완료</string>
    <string name="y1">2014년 3월</string>
    <string name="y2">2014년 4월</string>
    <string name="y3">2014년 5월</string>
    <string name="y4">2014년 6월</string>
    <string name="y5">2014년 7월</string>
    <string name="y6">2014년 8월</string>
    <string name="y7">2014년 9월</string>
    <string name="y8">2014년 10월</string>
    <string name="y9">2014년 11월</string>
    <string name="y10">2014년 12월</string>
    <string name="L1">2015년 1월</string>
    <string name="L2">2015년 2월</string>
    <string name="a">연락처</string>
    <string name="b">대표번호</string>
    <string name="c">교무실</string>
    <string name="d">행정실</string>
    <string name="e">팩스</string>
    <string name="f">1학년</string>
    <string name="g">2학년</string>
    <string name="h">3학년</string>
    <string name="i">주소</string>
    <string name="j">우)626-768 경상남도 양산시 어실로 388 (어곡동)</string>
    <string name="A">055-383-6601</string>
    <string name="B">070-4012-6904</string>
    <string name="C">055-383-6602</string>
    <string name="D">055-383-6606</string>
    <string name="E">070-4012-6905</string>
    <string name="F">055-383-6603</string>
    <string name="G">055-383-6609</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >홈</item>
        <item >공지 사항</item>
        <item >학교 소식</item>
        <item >동아리</item>
        <item >입학·진학</item>
        <item >학습 정보</item>
        <item>학사 일정</item>
        <item>고교 연락망</item>
        <item>찾아오기</item>
        <item>개발자 정보</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        
        
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
</resources>
