<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

      

      
        <ScrollView android:id="@+id/scrollView1" android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            
             <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          
          
           >
           <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/but"
          android:gravity="center"
          android:padding="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:gravity="left"
            android:text="@string/a"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/b"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/A"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/c"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/B"
            android:id="@+id/tel2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/d"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/C"
            android:id="@+id/tel3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/e"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:id="@+id/tel4"
            android:text="@string/D"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/E"
            android:id="@+id/tel5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>
         
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/g"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:id="@+id/tel6"
            android:paddingRight="5dp"
            android:text="@string/F"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>
         
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/h"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/G"
            android:id="@+id/tel7"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>
         
          <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/but"
          android:gravity="center"
          android:padding="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:gravity="left"
            android:text="@string/i"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttoncolor"
             android:orientation="horizontal"
             android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:text="@string/j"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
        </LinearLayout>
            
         
         
         
         
         </LinearLayout>
         </ScrollView>
         </LinearLayout>
         </RelativeLayout>
         